<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_studio"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/tab_studio" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/tab_tasks" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/tab_history" />
    <item
        android:id="@+id/nav_channels"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/tab_channels" />
    <item
        android:id="@+id/nav_agents"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/tab_agents" />
</menu>

